cleanups module usage in junit